[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/QuitDialog.gd" type="Script" id=1]

[node name="QuitDialog" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -49.5
margin_right = 128.0
margin_bottom = 49.5
popup_exclusive = true
window_title = "Unsaved changes"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 94.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 246.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "There are unsaved changes, and exiting will loose them"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 35.0
margin_top = 69.0
margin_right = 210.0
margin_bottom = 89.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0
text = "Quit"

[node name="SaveBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 101.0
margin_bottom = 20.0
text = "Save"

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 175.0
margin_bottom = 20.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_Cancel_pressed"]
